# continuum-riot-core

./: .env.example  .gitignore  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.pytest_tmp/: .fuse_hidden00001fb70000000e
alembic/: env.py  script.py.mako
alembic/versions/: 24b217004927_add_asset_registry.py  6d7f9db2b6b1_fix_patch_registry_discovered_at_column.py  76cb22759f36_add_mode_registry_tables.py  a20ae2841408_add_player_identity_tables.py  a6673c90b13c_add_patch_registry.py  a80417ec8616_add_job_run_registry_table.py
app/: main.py
app/api/: contract.py  pagination.py  response.py  router.py
app/api/v1/: ddragon.py  health.py  jobs.py  modes.py  players.py  static.py  version.py
app/core/: config.py  logging.py  paths.py  types.py
app/db/: engine.py  session.py
app/models/: asset.py  job_run.py  mode.py  patch.py
app/services/: champion_transform.py  ddragon.py  http_client.py  job_registry.py  match_transform.py  mode_authority.py  mode_classifier.py  mode_read.py  mode_seed.py  patch_poller.py  player_ingestion.py  queue_catalog.py  static_ingestion.py  static_read.py
app/utils/: hash.py
docs/: README.md  api.md  architecture.md  development.md
infra/postgres/: compose.yaml
tests/: conftest.py  test_contract.py  test_http_client.py  test_jobs.py  test_mode_classifier.py  test_mode_manifest.py  test_modes_read.py  test_static_ingestion.py
